daylight-equation/fixtures/daylight-v06-m1/vectors/negative/N9_bad_suite_id/AuthMsg.hex
8378216461796c696768742e617574686f72697a6174696f6e2e6d6573736167652e763675575543492d4441594c494748543a415554483a763658400a652ac24de117f0df08a34abd4c00e22f24554c6e782d071eb43caa0467e1911919257831ec60d292ac3efbc01bfcfae561bf153f2228bda200eba42eaf495e
